--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-Tunisia jQuery Vector MAP
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Tunisia jQuery Vector MAP</title>
+
+		<link href="css/jqvmap.css" media="screen" rel="stylesheet" type="text/css" />
+		<style>
+			body, p, figure, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dd, dt {
+				margin: 0;
+				padding: 0;
+			}
+			body {
+				background-color: #7EA4D0;
+				margin: 0;
+				padding: 0;
+			}
+			div#wrapper {
+				width: 100%;
+				margin: 0 auto;
+				text-align: center;
+			}
+			header {
+				background-color: #292929;
+				color: #D0D0D0;
+				margin-bottom: 5px;
+				line-height: 2.1;
+			}
+			footer {
+				background-color: #292929;
+				bottom: 0px;
+				position: absolute;
+				width: 100%;
+				line-height: 2.5;
+				color: #A2A2A2;
+				margin-top: 5px;
+				font-size: 14px;
+			}
+			header img {
+				width: 35px;
+				border-radius: 50px;
+				vertical-align: middle;
+				margin-bottom: 5px;
+				opacity: 0.85;
+			}
+			footer img {
+				width: 50px;
+				background-color: #AFAFAF;
+				padding: 3px;
+				border-radius: 2px;
+				vertical-align: middle;
+			}
+		</style>
+
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<script src="js/jquery.vmap.min.js" type="text/javascript"></script>
+		<script src="js/maps/jquery.vmap.tunisia.min.js" type="text/javascript" charset="utf-8"></script>
+
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$('#jqvmap').vectorMap({
+					map: 'tn_regions_fr',
+					backgroundColor: '#7EA4D0',
+					borderColor: '#818181',
+					borderOpacity: 0.75,
+					borderWidth: 1,
+					color: '#f4f3f0',
+					enableZoom: true,
+					hoverColor: '#c9dfaf',
+					hoverOpacity: null,
+					normalizeFunction: 'linear',
+					scaleColors: ['#b6d6ff', '#005ace'],
+					selectedColor: '#c9dfaf',
+					selectedRegion: null,
+					showTooltip: true,
+					onRegionClick: function(element, code, region) {
+						var msg = 'You clicked "'
+							+ region 
+							+ '" which has the code: '
+							+ code.toUpperCase();
+
+						alert(msg);
+					}
+				});
+			});
+		</script>
+	</head>
+	
+	<body>
+		<div id="wrapper">
+			<header>
+				<h2>
+				<a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"/></a>
+				 Tunisia Jquery Vector MAP</h2>
+			</header>
+			
+			<div id="jqvmap" style="width:100%;height:520px;"></div>
+			
+			<footer>
+				<p>
+				Copyright &copy; 2015 CreaGen (Creative Generation) 
+				<a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Logo.png"/></a></h2>
+				</p>
+			</footer>
+		</div>
+	</body>
+</html>
