--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
 				border-radius: 2px;
 				vertical-align: middle;
 			}
+			div#goToGit {
+				z-index: 999;
+				background-color: #94EF7A;
+				color: #095000;
+				opacity: 0.5;
+				border-radius: 8px;
+				width: 150px;
+				line-height: 45px;
+				position: absolute;
+				right: 25px;
+				top: 75px;
+			}
+			div#goToGit:hover {opacity:1;}
+			div#goToGit a{ text-decoration: none; }
 		</style>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
@@ -93,6 +107,8 @@
 				 Tunisia Jquery Vector MAP</h2>
 			</header>
 			
+			<div id="goToGit">View Source On GitHub <a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP">HERE</a></div>
+
 			<div id="jqvmap" style="width:100%;height:520px;"></div>
 			
 			<footer>
