--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta property="og:image" content="http://medhossam.github.io/Tunisia-jQuery-Vector-MAP/preview.jpg" />
 		<title>Tunisia jQuery Vector MAP</title>
 
 		<link href="css/jqvmap.css" media="screen" rel="stylesheet" type="text/css" />
@@ -101,6 +102,7 @@
 	
 	<body>
 		<div id="wrapper">
+			<img src="http://medhossam.github.io/Tunisia-jQuery-Vector-MAP/preview.jpg" style="display:none;position:absolute;top:-999px" />
 			<header>
 				<h2>
 				<a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"/></a>
