--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				vertical-align: middle;
 			}
 			div#goToGit {
+				cursor:pointer;
 				z-index: 999;
 				background-color: #94EF7A;
 				color: #095000;
@@ -106,10 +107,10 @@
 			<header>
 				<h2>
 				<a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"/></a>
-				 Tunisia Jquery Vector MAP</h2>
+				 Tunisia jQuery Vector MAP</h2>
 			</header>
 			
-			<div id="goToGit">View Source On GitHub <a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP">HERE</a></div>
+			<div id="goToGit"><a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP">View Source On GitHub HERE</a></div>
 
 			<div id="jqvmap" style="width:100%;height:520px;"></div>
 			
