--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@
 				border-radius: 2px;
 				vertical-align: middle;
 			}
-			div#goToGit {
-				cursor:pointer;
-				z-index: 999;
+			#goToGit {
 				background-color: #94EF7A;
+				text-decoration: none;
 				color: #095000;
-				opacity: 0.5;
-				border-radius: 8px;
 				width: 150px;
-				line-height: 45px;
+				opacity: 0.5;
 				position: absolute;
 				right: 25px;
 				top: 75px;
+				cursor:pointer;
+				border-radius: 8px;
+				padding: 15px 5px;
+				z-index: 999;
 			}
-			div#goToGit:hover {opacity:1;}
-			div#goToGit a{ text-decoration: none; }
+			#goToGit:hover {opacity:1;}
+			#goToGit div { line-height:30px; }
 		</style>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
@@ -110,7 +111,7 @@
 				 Tunisia jQuery Vector MAP</h2>
 			</header>
 			
-			<div id="goToGit"><a href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP">View Source On GitHub HERE</a></div>
+			<a id="goToGit" href="https://github.com/MedHossam/Tunisia-jQuery-Vector-MAP" target="_blank"><div>View Source On GitHub HERE</div></a>
 
 			<div id="jqvmap" style="width:100%;height:520px;"></div>
 			
